// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field metadata relation creation should fail relation MANY_TO_ONE when joinColumn name conflicts with an existing field on target object 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "NOT_AVAILABLE",
              "message": "Name "fieldNameBis" is not available as it is already used by another field",
              "userFriendlyMessage": "Name "fieldNameBis" is not available as it is already used by another field",
              "value": "fieldNameBis",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "fieldNameBis",
            "objectMetadataId": Any<String>,
          },
          "status": "fail",
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "NOT_AVAILABLE",
              "message": "Name "targetFieldLabel" is not available as it is already used by another field",
              "userFriendlyMessage": "Name "targetFieldLabel" is not available as it is already used by another field",
              "value": "targetFieldLabel",
            },
            {
              "code": "FIELD_METADATA_NOT_FOUND",
              "message": "Relation field target metadata not found in both existing and about to be created field metadatas",
              "userFriendlyMessage": "Relation field target metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "targetFieldLabel",
            "objectMetadataId": Any<String>,
          },
          "status": "fail",
          "type": "create_field",
        },
      ],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "IDX_041dec99f45bbff661562e78d8b",
          },
          "status": "fail",
          "type": "create_index",
        },
      ],
      "objectMetadata": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [],
      "viewFilter": [],
      "viewGroup": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "invalidViewFilter": 0,
      "invalidViewGroup": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY when joinColumn name conflicts with an existing field on target object 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldNameBisId" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldNameBisId" is not available as it is already used by another field",
                "value": "fieldNameBisId",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "fieldNameBis",
              "objectMetadataId": Any<String>,
            },
            "status": "fail",
            "type": "create_field",
          },
          {
            "errors": [
              {
                "code": "FIELD_METADATA_NOT_FOUND",
                "message": "Relation field target metadata not found in both existing and about to be created field metadatas",
                "userFriendlyMessage": "Relation field target metadata not found",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "targetFieldLabel",
              "objectMetadataId": Any<String>,
            },
            "status": "fail",
            "type": "create_field",
          },
        ],
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "IDX_041dec99f45bbff661562e78d8b",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [],
        "routeTrigger": [],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
        "viewFilter": [],
        "viewGroup": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidFieldMetadata": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidRouteTrigger": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "invalidViewFilter": 0,
        "invalidViewGroup": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail should fail when creating MANY_TO_ONE self-relation with same field name and label 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "NOT_AVAILABLE",
              "message": "Name "manager" is not available as it is already used by another field",
              "userFriendlyMessage": "Name "manager" is not available as it is already used by another field",
              "value": "manager",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "manager",
            "objectMetadataId": Any<String>,
          },
          "status": "fail",
          "type": "create_field",
        },
      ],
      "index": [],
      "objectMetadata": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [],
      "viewFilter": [],
      "viewGroup": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "invalidViewFilter": 0,
      "invalidViewGroup": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`Field metadata relation creation should fail should fail when creating ONE_TO_MANY self-relation with same field name and label 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "NOT_AVAILABLE",
              "message": "Name "manager" is not available as it is already used by another field",
              "userFriendlyMessage": "Name "manager" is not available as it is already used by another field",
              "value": "manager",
            },
            {
              "code": "NOT_AVAILABLE",
              "message": "Name "manager" is not available as it is already used by another field",
              "userFriendlyMessage": "Name "manager" is not available as it is already used by another field",
              "value": "manager",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "manager",
            "objectMetadataId": Any<String>,
          },
          "status": "fail",
          "type": "create_field",
        },
      ],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "IDX_772faa136925e6c4141fd45ac0e",
          },
          "status": "fail",
          "type": "create_index",
        },
      ],
      "objectMetadata": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [],
      "viewFilter": [],
      "viewGroup": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "invalidViewFilter": 0,
      "invalidViewGroup": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;
